--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ pre code {
 <ul>
 <li>Major: Data Science</li>
 <li>Graduation: Bachelor of Science in Data Science, May 2022</li>
+<li>Cumulative GPA: 3.56/4.0</li>
 </ul>
 </div>
 </div>
